Notes div height fixed and ellipsis added for text-overflow

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,3 +1,11 @@
+.custom-shadow {
+    -webkit-box-shadow: 0 8px 6px -6px #999;
+    -moz-box-shadow: 0 8px 6px -6px #999;
+    box-shadow: 0 8px 6px -6px #999;
+
+    /* the rest of your styling */
+}
+
 .active {
     background-color: #a1f3d7;
     border-radius: 8px;
