--- a/src/app/notes/note/note.component.css
+++ b/src/app/notes/note/note.component.css
@@ -32,3 +32,9 @@
 .bookmarked {
     border-left: 3px solid black;
 }
+
+.ellipsis{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
